Adding caltrack images to prefetch

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
         const prefetchResourcesPath = ["naveen-pic.webp", "naveenmraja-screenshot.webp", "mysecrets-screenshot.webp",
             "assetsd-screenshot.webp", "ecdemo-screenshot.webp", "prattle-screenshot.webp", "aws-sa.webp",
             "jusp-logo-white.webp", "prattle-logo.webp", "upwork-python.webp", "mysecrets-logo.webp", "logo192.webp",
-            "assetsd-logo.webp"]
+            "assetsd-logo.webp", "caltrack-logo.webp", "caltrack-screenshot.webp"]
         prefetchResourcesPath.forEach((resource) => {
             const prefetchLink = document.createElement("link");
             prefetchLink.rel = "prefetch";
